# Julia_Experiences

./: README.md
Function/: functions.jl
Julia_Experiences/Basic/Basic/: basic.jl
Julia_Experiences/Basic/Dataframe/: dependencies.jl  main.jl  sales_module.jl
Julia_Experiences/Basic/Expressions/: main.jl
Julia_Experiences/Basic/Files/: main.jl
Julia_Experiences/Basic/Fortran/Fortran-Julia/: CMakeLists.txt  build.jl
Julia_Experiences/Basic/Fortran/Fortran-Julia/app/: calc.f90  calc_test.f90
Julia_Experiences/Basic/Fortran/Fortran-Julia/cpp/: calc.hpp  main.cpp
Julia_Experiences/Basic/HelloWorld/: helloWorld.jl
Julia_Experiences/Basic/Math/Functional_Programing/: example_1.jl
Julia_Experiences/Basic/Module/: ColorConverter.jl
Julia_Experiences/Basic/Multiple_dispatch/: main.jl
Julia_Experiences/Basic/Operators_overload/: main.jl  module.jl
Julia_Experiences/Basic/Python/: main.jl
Julia_Experiences/Basic/Shell/: functions.sh  main.jl
Julia_Experiences/Basic/Structs/: main.jl
Julia_Experiences/Trainings/BD/: db_manager.jl  dependencies.jl  main.jl  setup.sh
Julia_Experiences/Trainings/Bindings/Cpp/Cpp-Julia/: CMakeLists.txt  main.jl
Julia_Experiences/Trainings/Bindings/Cpp/Cpp-Julia/src/: test.cpp
Julia_Experiences/Trainings/Bindings/Python/: main.py  math_module.jl  math_module.py
Julia_Experiences/Trainings/Bindings/Rust/: Cargo.toml  main.jl  setup.sh
Julia_Experiences/Trainings/Bindings/Shell/: functions.sh
Julia_Experiences/Trainings/CSV/: main.jl  sample.txt
Julia_Experiences/Trainings/CSV/scripts/: dependencies.jl  setup.sh
Julia_Experiences/Trainings/Contracts/: main.jl
Julia_Experiences/Trainings/Image/: main.jl
Julia_Experiences/Trainings/Macros/: ImageDSL.jl  dependencies.jl  generate_test_images.jl  main.jl
Julia_Experiences/Trainings/SDL/: main.jl
Julia_Experiences/Trainings/Threads/: main.jl
Julia_Experiences/Trainings/XML/: main.jl  svgProcessor.jl
Module/: main.jl
Trainings/SDL/: main.jl
Trainings/SDL/scripts/: dependencies.jl
Trainings/SDL/src/: engine.jl  paint.jl
(+23 files in other folders)
